# gawsandbox

./: .gitignore  LICENSE  manage.py  pyproject.toml
gawsandbox/: asgi.py  settings.py  urls.py  wsgi.py
qotd/: models.py
qotd/migrations/: 0001_initial.py
